--- a/bootstrap/src/main/resources/application.yml
+++ b/bootstrap/src/main/resources/application.yml
@@ -3,3 +3,15 @@ cat-facts:
     base-url: https://cat-fact.herokuapp.com
     connection-time-out-millis: 2_000
     read-time-out-millis: 2_000
+
+resilience4j:
+  circuitbreaker:
+    instances:
+      random-cat-fact:
+        registerHealthIndicator: true
+        slidingWindowSize: 100
+        failureRateThreshold: 50
+        permittedNumberOfCallsInHalfOpenState: 2
+        minimumNumberOfCalls: 1
+        slidingWindowType: TIME_BASED
+        recordExceptions: test.sdc.resilience4j.CatFactServiceAccessException
