--- a/spring-reactor/pom.xml
+++ b/spring-reactor/pom.xml
@@ -23,6 +23,10 @@
             <groupId>io.github.resilience4j</groupId>
             <artifactId>resilience4j-reactor</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.github.resilience4j</groupId>
+            <artifactId>resilience4j-circuitbreaker</artifactId>
+        </dependency>
 
         <!-- Spring Boot -->
         <dependency>
