--- a/basic/pom.xml
+++ b/basic/pom.xml
@@ -8,38 +8,26 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>boostrap</artifactId>
+    <artifactId>basic</artifactId>
 
     <dependencies>
         <!-- Internal dependencies -->
         <dependency>
             <groupId>fr.sdecout.resilience4j</groupId>
-            <artifactId>basic</artifactId>
+            <artifactId>common</artifactId>
             <version>${project.version}</version>
         </dependency>
+
+        <!-- Resilience4j -->
         <dependency>
-            <groupId>fr.sdecout.resilience4j</groupId>
-            <artifactId>spring-reactor</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>fr.sdecout.resilience4j</groupId>
-            <artifactId>spring-boot-2</artifactId>
-            <version>${project.version}</version>
+            <groupId>io.github.resilience4j</groupId>
+            <artifactId>resilience4j-circuitbreaker</artifactId>
         </dependency>
 
         <!-- Spring Boot -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-webflux</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-actuator</artifactId>
+            <artifactId>spring-boot-starter</artifactId>
         </dependency>
     </dependencies>
 
