--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,7 +4,9 @@ updates:
     directory: "/.github/workflows"
     schedule:
       interval: "monthly"
+    open-pull-requests-limit: 0
   - package-ecosystem: "maven"
     directory: "/"
     schedule:
       interval: "monthly"
+    open-pull-requests-limit: 0
